# SimuCore

./: .gitignore  Dockerfile  config.h  docker-compose.yml  library.json  library.propterties  pyproject.toml  pyvenv.cfg  ruff.toml  test.py  test_config.json
.github/workflows/: run-tests.yml
include/SimuCore/: ApplicationTree.hpp  Binding.hpp  Component.hpp  NoImplementationWebsocketServer.hpp  Signal.hpp  SimuCoreApplication.hpp  SimuCoreBaseConfig.hpp  SimuCoreConfig.hpp  SimuCoreHAL.hpp  SimuCoreLogger.hpp  SimuCoreRunner.hpp  SimuCoreTick.hpp  SimuCoreWebsocketServer.hpp  json.hpp
scripts/: SimuCoreBaseConfig.json  generate_config.py  generate_config_struct.py  generate_cpp_config.py  generate_struct_from_schema.py  requirements.txt  select_src.py  simucore_config.schema.json  simucore_schema.py  simucore_simulation.py  simulation.py  websocket.py
scripts/include/: schema_struct.h
simucore-frontend/: package-lock.json  package.json
simucore-frontend/src/: App.tsx  main.tsx
simucore_pytest/: plugin.py
simucore_pytest/config/: models.py
simucore_pytest/core/: application_tree.py  schemas.py  simulation.py
src/arduino/: SimuCoreHal.cpp  SimuCoreLogger.cpp  SimuCoreTick.cpp
src/generic/: ApplicationTree.cpp  Component.cpp  SimuCoreApplication.cpp  SimuCoreLogger.cpp
src/native/: SimuCoreHal.cpp  SimuCoreLogger.cpp  SimuCoreNativeMain.cpp  SimuCoreTick.cpp  SimuCoreWebsocketServerNative.cpp
tests/: test_dummy.py
tests/dummy_project/: SimuCoreBaseConfig.json  platformio.ini
tests/dummy_project/include/: Application.hpp
(+1 files in other folders)
